// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload List handle error 1`] = `
<span
  class=""
>
  <div
    class="wmstool-upload wmstool-upload-select wmstool-upload-select-text"
  >
    <span
      class="wmstool-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button>
        upload
      </button>
    </span>
  </div>
  <div
    class="wmstool-upload-list wmstool-upload-list-text"
  >
    <div
      class="wmstool-upload-list-item wmstool-upload-list-item-error"
    >
      <div
        class="wmstool-upload-list-item-info"
      >
        <span>
          <i
            class="anticon anticon-paper-clip"
          />
          <span
            class="wmstool-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        class="anticon anticon-cross"
        title="Remove file"
      />
      <div
        class="wmstool-upload-list-item-progress fade-leave"
      >
        <div
          class="wmstool-progress wmstool-progress-line wmstool-progress-status-normal wmstool-progress-default"
        >
          <div>
            <div
              class="wmstool-progress-outer"
            >
              <div
                class="wmstool-progress-inner"
              >
                <div
                  class="wmstool-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should be uploading when upload a file 1`] = `
<span
  class=""
>
  <div
    class="wmstool-upload wmstool-upload-select wmstool-upload-select-text"
  >
    <span
      class="wmstool-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button>
        upload
      </button>
    </span>
  </div>
  <div
    class="wmstool-upload-list wmstool-upload-list-text"
  >
    <div
      class="wmstool-upload-list-item wmstool-upload-list-item-uploading wmstool-upload-animate-enter"
    >
      <div
        class="wmstool-upload-list-item-info"
      >
        <span>
          <i
            class="anticon anticon-spin anticon-loading"
          />
          <span
            class="wmstool-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        class="anticon anticon-cross"
        title="Remove file"
      />
      <div
        class="wmstool-upload-list-item-progress"
      >
        <div
          class="wmstool-progress wmstool-progress-line wmstool-progress-status-normal wmstool-progress-default"
        >
          <div>
            <div
              class="wmstool-progress-outer"
            >
              <div
                class="wmstool-progress-inner"
              >
                <div
                  class="wmstool-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Upload List should be uploading when upload a file 2`] = `
<span
  class=""
>
  <div
    class="wmstool-upload wmstool-upload-select wmstool-upload-select-text"
  >
    <span
      class="wmstool-upload"
      role="button"
      tabindex="0"
    >
      <input
        accept=""
        style="display: none;"
        type="file"
      />
      <button>
        upload
      </button>
    </span>
  </div>
  <div
    class="wmstool-upload-list wmstool-upload-list-text"
  >
    <div
      class="wmstool-upload-list-item wmstool-upload-list-item-done"
    >
      <div
        class="wmstool-upload-list-item-info"
      >
        <span>
          <i
            class="anticon anticon-paper-clip"
          />
          <span
            class="wmstool-upload-list-item-name"
            title="foo.png"
          >
            foo.png
          </span>
        </span>
      </div>
      <i
        class="anticon anticon-cross"
        title="Remove file"
      />
      <div
        class="wmstool-upload-list-item-progress fade-leave"
      >
        <div
          class="wmstool-progress wmstool-progress-line wmstool-progress-status-normal wmstool-progress-default"
        >
          <div>
            <div
              class="wmstool-progress-outer"
            >
              <div
                class="wmstool-progress-inner"
              >
                <div
                  class="wmstool-progress-bg"
                  style="width: 0%; height: 2px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;
